[metadata]
name = jschon-sort
version = 0.2.0
description = Sorts a JSON or YAML document to match a JSON Schema's order of properties
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.github.com/ikonst/jschon-sort
maintainer = Ilya Konstantinov
maintainer_email = ilya.konstantinov@gmail.com
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    jschon>=0.9
    ruyaml
python_requires = >=3.8

[options.package_data]
jschon_sort =
    py.typed

[options.packages.find]
exclude = tests*

[options.entry_points]
console_scripts =
  jschon-sort = jschon_tools.cli:sort_main
  jschon-remove-additional-props = jschon_tools.cli:remove_additional_props_main

[tool:pytest]
addopts = --cov .

[coverage:run]
branch = true

[coverage:report]
fail_under = 100
show_missing = true
omit =
    setup.py

[mypy]
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
strict_equality = true
enable_error_code = truthy-function
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
